Update the API and the UI to retrieve and show translated messages, grouped by test module
